# OpenCVBasics

./: CMakeLists.txt  README.md  main.cpp
include/: affinetransformation.h  canny.h  hough.h  stitching.h
src/: affinetransformation.cpp  canny.cpp  hough.cpp  stitching.cpp
